--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Document</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
         <style>
+            #foot{
+                    text-align: center;
+            }
             @media screen and (max-width: 850px) {
                 #image{
                     text-align: center;
@@ -74,9 +77,8 @@
                                                                target="_blank">Binary Search Tree</a></figcaption>
                     </figure>
                 </div>
-
-
             </div>
+            <footer id="foot"><p>&copy;Copyright Richard Ramos</p></footer>
         </div>
         <!--        This are the Java scripts for Bootstrap-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
